Add second part of the webpage
I add the second part to the html archive and some style with css. Also
I made a little changes on the css of first part.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
+
     <div class="header">
         <div class="top">
             <div class="logo">
@@ -26,6 +27,30 @@
             </div>
             <img src="./img/img-one.jpeg" alt="A magnificent tiger looking at the camera" width="350px" height="auto">
         </div>
+    </div>
+
+    <div class="second">
+        <h2>Some random information</h1>
+        <div class="pictures">
+            <div class ="info">
+                <img class="square" src="./img/img-two.jpeg" alt="A cute kitty with close eyes and a smile" >
+                <div class="text">This is some subtext under and image or illustration</div>
+            </div>
+            <div class ="info">
+                <img class="square" src="./img/img-three.jpeg" alt="A lion looking at the horizon" >
+                <div class="text">This is some subtext under and image or illustration</div>
+            </div>
+            <div class ="info">
+                <img class="square" src="./img/img-four.jpeg" alt="A tiger stretching"  >
+                <div class="text">This is some subtext under and image or illustration</div>
+            </div>
+            <div class ="info">
+                <img class="square" src="./img/img-five.jpeg" alt="A feline eye gazing intensively" >
+                <div class="text">This is some subtext under and image or illustration</div>
+            </div>
+        </div>
+
+        
     </div>
     
 </body>
