--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./styles2.css">
 </head>
 <body>
 
@@ -33,24 +33,26 @@
         <h2>Some random information</h1>
         <div class="pictures">
             <div class ="info">
-                <img class="square" src="./img/img-two.jpeg" alt="A cute kitty with close eyes and a smile" >
+                <img class="image" src="./img/img-two.jpeg" alt="A cute kitty with close eyes and a smile" >
+                <div class="text">This is some subtext under and image or illustration</div>
+            </div>
+            <div class ="info">    
+                <img class="image" src="./img/img-three.jpeg" alt="A lion looking at the horizon" >    
                 <div class="text">This is some subtext under and image or illustration</div>
             </div>
             <div class ="info">
-                <img class="square" src="./img/img-three.jpeg" alt="A lion looking at the horizon" >
+                <img class="image" src="./img/img-four.jpeg" alt="A tiger stretching" >    
                 <div class="text">This is some subtext under and image or illustration</div>
             </div>
             <div class ="info">
-                <img class="square" src="./img/img-four.jpeg" alt="A tiger stretching"  >
-                <div class="text">This is some subtext under and image or illustration</div>
-            </div>
-            <div class ="info">
-                <img class="square" src="./img/img-five.jpeg" alt="A feline eye gazing intensively" >
+                <img class="image" src="./img/img-five.jpeg" alt="A feline eye gazing intensively" >    
                 <div class="text">This is some subtext under and image or illustration</div>
             </div>
         </div>
 
-        
+        <div class="third">
+
+        </div>
     </div>
     
 </body>
