Add the third part and correct some issues
I add the third part of the website to the html file and change the
style using css properties. ALso, I modified the width off all sections
so they fit the width of the body to avoid any size differences of the
coloured part containers.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
-    <link rel="stylesheet" href="./styles2.css">
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
 
@@ -30,30 +30,48 @@
     </div>
 
     <div class="second">
-        <h2>Some random information</h1>
+        <h2>Some random information</h2>
+
         <div class="pictures">
             <div class ="info">
-                <img class="image" src="./img/img-two.jpeg" alt="A cute kitty with close eyes and a smile" >
+                <img class="image" src="./img/img-two.jpeg" alt="A cute kitty with close eyes and a smile" width="100px" height="auto">
                 <div class="text">This is some subtext under and image or illustration</div>
             </div>
             <div class ="info">    
-                <img class="image" src="./img/img-three.jpeg" alt="A lion looking at the horizon" >    
+                <img class="image" src="./img/img-three.jpeg" alt="A lion looking at the horizon" width="100px" height="auto">    
                 <div class="text">This is some subtext under and image or illustration</div>
             </div>
             <div class ="info">
-                <img class="image" src="./img/img-four.jpeg" alt="A tiger stretching" >    
+                <img class="image" src="./img/img-four.jpeg" alt="A tiger stretching" width="100px" height="auto">    
                 <div class="text">This is some subtext under and image or illustration</div>
             </div>
             <div class ="info">
-                <img class="image" src="./img/img-five.jpeg" alt="A feline eye gazing intensively" >    
+                <img class="image" src="./img/img-five.jpeg" alt="A feline eye gazing intensively" width="100px" height="auto">    
                 <div class="text">This is some subtext under and image or illustration</div>
             </div>
-        </div>
-
-        <div class="third">
-
         </div>
     </div>
-    
+
+    <div class="third">
+        <div class="text-container">
+            <div class="para"><em>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</em></div>
+            <div class="by"><strong>-Thor, God of Thunder</strong></div>
+        </div>
+    </div>
+
+    <div class="fourth">
+        <div class="window-container">
+            <div class="window-text">
+                <h3>Call to action! It's time!</h3>
+                <p class="window-paragraph">Sign up for product by clicking that button right over there!</p>
+            </div>
+            <button class="window-button">Sign up</button>
+        </div>
+    </div>
+
+    <footer>
+        <div class="footer-container">Copyright © The Odin Project 2021 </div>
+    </footer>
+
 </body>
 </html>
