Add style to the last two parts
I add the style with css properties to the fourth part and the footer

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div class="fourth">
         <div class="window-container">
             <div class="window-text">
-                <h3>Call to action! It's time!</h3>
+                <h3><strong>Call to action! It's time!</strong></h3>
                 <p class="window-paragraph">Sign up for product by clicking that button right over there!</p>
             </div>
             <button class="window-button">Sign up</button>
